src/test/resources/semantic/accept/functionCall.ul
void main() {
    bar();
}

int foo(int[5] foo) {
}

void bar() {
    int[5] temp;
    foo(temp);
}
