src/test/resources/semantic/reject/arrayAssignmentNonArray.ul
void main() {
}

void foo() {
    int foo;
    foo[5] = 50;
}
